--- a/p/ph/phi/phillymag.com.html
+++ b/p/ph/phi/phillymag.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the phillymag.com privacy policy that was archived on 2004-06-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040610165707id_/http%3A//www.phillymag.com/content.php%3Fname%3Dprivacy.txt) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the phillymag.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204175009id_/http%3A//www.phillymag.com/content.php%3Fname%3Dprivacy.txt) for the most accurate reproduction.-->
 
 <html><head>
 <title>www.phillymag.com Home Page</title>
@@ -41,7 +41,7 @@ function MM_swapImage() { //v3.0
 <link rel="stylesheet" href="http://www.citymagnet.com/syeager/syeager.css" type="text/css">
 </head>
 
-<body bgcolor="#eeeeee" text="#000000" leftmargin="0" topmargin="0" rightmargin="0" marginheight="0" marginwidth="0" onload="MM_preloadImages('http://www.phillymag.com/images/LT_bestof_OVER.gif','http://www.phillymag.com/images/LT_topdocs_OVER.gif','http://www.phillymag.com/images/LT_subscribe_OVER.gif','http://www.phillymag.com/images/LT_contact_OVER.gif','http://www.phillymag.com/images/LT_personals_OVER.gif','http://www.phillymag.com/images/LT_marketplace_OVER.gif','http://www.phillymag.com/images/LT_advertise_OVER.gif','http://www.phillymag.com/images/LT_Archives_OVER.gif','http://www.phillymag.com/images/LT_socialdatebook_OVER.gif','http://www.phillymag.com/images/LT_ewedding_OVER.gif','http://www.phillymag.com/images/LT_tourism_OVER.gif','http://www.phillymag.com/images/LT_winespirits_OVER.gif','')">
+<body bgcolor="#eeeeee" text="#000000" leftmargin="0" topmargin="0" rightmargin="0" marginheight="0" marginwidth="0" onload="MM_preloadImages('http://www.phillymag.com/images/LT_bestof_OVER.gif','http://www.phillymag.com/images/LT_topdocs_OVER.gif','http://www.phillymag.com/images/LT_subscribe_OVER.gif','http://www.phillymag.com/images/LT_contact_OVER.gif','http://www.phillymag.com/images/LT_personals_OVER.gif','http://www.phillymag.com/images/LT_marketplace_OVER.gif','http://www.phillymag.com/images/LT_advertise_OVER.gif','http://www.phillymag.com/images/LT_Archives_OVER.gif','http://www.phillymag.com/images/LT_events_OVER.gif','http://www.phillymag.com/images/LT_socialdatebook_OVER.gif','http://www.phillymag.com/images/LT_ewedding_OVER.gif','http://www.phillymag.com/images/LT_tourism_OVER.gif','http://www.phillymag.com/images/LT_winespirits_OVER.gif','')">
 <table border="0" cellspacing="0" cellpadding="0" bgcolor="ffffff">
   <tbody><tr><td width="185" height="60"> 
 <div align="center">
@@ -52,8 +52,8 @@ function MM_swapImage() { //v3.0
 
       <div align="left"><object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=5,0,0,0" width="560" height="60">
           <param name="movie" value="http://www.phillymag.com/flash/subscribe3.swf">
-          <param name="quality" value="high"><param name="BGCOLOR" value="F4272E">
-          <embed src="http://www.phillymag.com/flash/subscribe3.swf" quality="high" pluginspage="http://www.macromedia.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash" type="application/x-shockwave-flash" width="560" height="60" bgcolor="F4272E">
+          <param name="quality" value="high"><param name="BGCOLOR" value="003399">
+          <embed src="http://www.phillymag.com/flash/subscribe3.swf" quality="high" pluginspage="http://www.macromedia.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash" type="application/x-shockwave-flash" width="560" height="60" bgcolor="003399">
            
         </object></div> 
 	
@@ -168,6 +168,15 @@ function MM_swapImage() { //v3.0
 <a href="http://www.phillymag.com/Archives" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Archives','','http://www.phillymag.com/images/LT_Archives_OVER.gif',1)">
 <img name="Archives" border="0" src="http://www.phillymag.com/images/LT_Archives.gif" width="125" height="25"></a></td>
                       </tr>
+	
+
+<tr><td bgcolor="f2f2f2" width="25" align="center">
+<a href="http://www.kintera.org/philadelphia" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('events','','http://www.phillymag.com/images/LT_events_OVER.gif',1)">
+<img border="0" src="http://www.phillymag.com/images/LN_events.gif" width="25" height="25"></a></td>
+<td bgcolor="adadad" class="nav">
+<a href="http://www.kintera.org/philadelphia" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('events','','http://www.phillymag.com/images/LT_events_OVER.gif',1)">
+<img name="events" border="0" src="http://www.phillymag.com/images/LT_events.gif" width="125" height="25"></a></td>
+                      </tr>
 	<!-- END LEFT NAVIGATION BAR --> 
 
 </tbody></table></td></tr></tbody></table>
@@ -185,10 +194,11 @@ function MM_swapImage() { //v3.0
 <a target="_blank" href="http://www.elegantwedding.com/philadelphia" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('ewedding','','http://www.phillymag.com/images/LT_ewedding_OVER.gif',1)">
 <img name="ewedding" border="0" src="http://www.phillymag.com/images/LT_ewedding.gif"></a></td>
                 </tr>
-<tr><td bgcolor="e2e2e2" class="nav">
-<a href="http://www.phillymag.com/socialdatebook" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('socialdatebook','','http://www.phillymag.com/images/LT_socialdatebook_OVER.gif',1)">
+<!--<tr><td bgcolor="e2e2e2" class="nav">
+<a target="_blank" href="http://www.kintera.org/philadelphia" onMouseOut="MM_swapImgRestore()"
+onMouseOver="MM_swapImage('socialdatebook','','http://www.phillymag.com/images/LT_socialdatebook_OVER.gif',1)">
 <img name="socialdatebook" border="0" src="http://www.phillymag.com/images/LT_socialdatebook.gif"></a></td>
-                </tr>
+                </tr>-->
 <tr><td bgcolor="e2e2e2" class="nav">
 <a href="http://www.phillymag.com/content.php?name=pcvbcovers.txt" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('tourism','','http://www.phillymag.com/images/LT_tourism_OVER.gif',1)">
 <img name="tourism" border="0" src="http://www.phillymag.com/images/LT_tourism.gif"></a></td>
@@ -379,7 +389,7 @@ function MM_swapImage() { //v3.0
     </td>
 </tr>
 </tbody></table>
-</td></tr></tbody></table>
+</td><td></td></tr></tbody></table>
 
 
 
