--- a/t/tr/tra/transparent.com.html
+++ b/t/tr/tra/transparent.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the transparent.com privacy policy that was archived on 2004-06-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040613181425id_/http%3A//www.transparent.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the transparent.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204175438id_/http%3A//www.transparent.com/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 	<title>Transparent Language - LanguageNow!</title>
@@ -354,7 +354,9 @@ Language Translation Software"> Transparent Store </a>||
 
 	            <a href="http://www.transparentlanguage.com" target="newwin" title="Visit Transparent Language's Corporate Website, TransparentLanguage.com"> www.TransparentLanguage.com</a> ||
 				<a href="/privacy.htm" target="_top" title="Transparent Language Privacy Policy"> Privacy Policy</a> ||
-				<a href="http://www.transparentlanguage.com/sub_comp_info.htm" target="_top" title="Transparent Language Address, Fax, and Phone"> Contact Information</a>
+				<a href="http://www.transparentlanguage.com/sub_comp_info.htm" target="_top" title="Transparent Language Address, Fax, and Phone"> Contact Information</a> ||
+				<a href="http://www.transparent.com/affiliates/index.htm" target="_top" title="Transparent Language Affiliate Program"> Affiliate Program</a> 
+				
 				 </font><p><font class="nortxt_8pt" face="Arial, Helvetica, sans-serif" size="1">
 				If you have comments about this language learning site, language software, or ways to learn languages, please
 				<a href="mailto:info@transparent.com"> contact us</a>.<br>
