--- a/d/de/del/deltadentalins.com.html
+++ b/d/de/del/deltadentalins.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the deltadentalins.com privacy policy that was archived on 2004-06-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040603122204id_/http%3A//www.deltadentalins.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the deltadentalins.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204181935id_/http%3A//www.deltadentalins.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy Statement</title>
@@ -11,52 +11,63 @@
 <table width="500" border="0">
   <tbody><tr>
     <td> 
-      <p class="hddkblu"><img src="pix/private.gif" width="500" height="28"></p>
+	<p class="hddkblu"><img src="pix/private.gif" width="500" height="28"></p>
+      <p class="txtmdblubld">PRIVACY STATEMENT</p>
+      <p class="txtmdblubld"><font color="#FF0000" class="txtmdblubld">This policy 
+        was last updated on March 27, 2004</font></p>
       <p class="txtbldblk">For information regarding how we protect the privacy 
         of enrollee information, please review the enrollee privacy statement, 
-        accessible from the home page of this web site. Information relating to 
-        the security of enrollee eligibility and benefits information is discussed 
-        in the Security section below.</p>
-      <p></p>
-      <p class="sbhdmdBlu">Policy</p>
+        accessible from <br>
+        the home page of this web site. Information relating to the security <br>
+        of enrollee eligibility and benefits information is discussed in the <br>
+        Security section below.</p>
+      <p class="sbhdmdBlu">Policy </p>
       <p class="txtblk">Delta Dental of California, Delta Dental of Pennsylvania, 
         Delta Dental Insurance Company and Private Medical-Care, Inc. maintain 
         the confidentiality of client, dentist and other information as required 
         by law. Personal information that may be obtained through the use of our 
         web services is not disclosed to other companies for marketing purposes, 
         and personal information is released only as necessary for administration 
-        of the dental and vision benefit programs.</p>
+        of the dental and vision benefit programs. </p>
+      <p class="txtblk"><font color="#FF0000" class="txtblk">If we receive personal 
+        information via the web site or email, unrelated to administration of 
+        a benefit program, it is retained only for the purposes of responding 
+        to an inquiry and is routinely purged from our system.</font></p>
       <p class="sbhdmdBlu">Security</p>
-      <p class="txtblk"><span class="txtblk">We employ security measures to control 
-        access to the eligibility and dental benefit information under our control. 
-        We use industry standard technical mechanisms, such as firewalls and encryption, 
-        to safeguard the confidentiality of personal enrollee information. E-mail 
-        of sensitive information may not be secure. When submitting inquiries 
-        regarding benefits or eligibility, please use one of our secure online 
-        forms. </span></p>
-      <p class="txtblk">A personal login ID and password are required to access 
-        any of our online services that display personal enrollee information. 
-        The pages displaying the user's dental benefits and/or claims information 
-        are secured (encrypted) pages. The user identification and password required 
+      <p class="txtblk">We employ security measures to control access to the eligibility 
+        and dental benefit information under our control. We use industry standard 
+        technical mechanisms, such as firewalls and encryption, to safeguard the 
+        confidentiality of personal enrollee information. E-mail of sensitive 
+        information may not be secure. When submitting inquiries regarding benefits 
+        or eligibility, please use one of our secure online forms.
+	</p>
+        <p class="txtblk">A personal login ID and password are required to access any of our online 
+        services that display personal enrollee information. The pages displaying 
+        the user's dental benefits and/or claims information are secured (encrypted) 
+        pages. <span class="txtblk">The user identification and password required 
         for site access is internally validated to ensure this information cannot 
-        be viewed without proper authority and security authentication.</p>
-      <p class="txtblk">We understand there may be sensitivity about using Social 
-        Security Numbers as a means of identification. Social Security Numbers 
-        are routinely used for patient identification in health care, and we only 
-        use this number to administer dental and vision programs and do not release 
-        it to unauthorized individuals. We will comply with applicable laws relating 
-        to use and display of Social Security Numbers.</p>
-      <p class="sbhdmdBlu">Links to Other Web Sites</p>
-      <p class="txtblk">While certain web pages may contain links to other related 
-        web sites, we are not responsible for the privacy practices or the content 
-        of such sites. The link to other web sites is for information purposes 
-        only and is not a guarantee or endorsement of the material, services or 
-        products on those web sites.</p>
+        be viewed without proper authority and security authentication.</span></p><span class="txtblk">
+        <p class="txtblk">
+        We understand there may be sensitivity about using Social Security Numbers 
+        as a means of identification. Social Security Numbers are routinely used 
+        for patient identification in health care, and we only use this number 
+        to administer dental and vision programs and do not release it to unauthorized 
+        individuals. We will comply with applicable laws relating to use and display 
+        of Social Security Numbers.
+      </p>
+      <p class="txtblk"><span class="sbhdmdBlu">Links to Other Web Sites</span><br>
+        <br>
+        While certain web pages may contain links to other 
+        related web sites, we are not responsible for the privacy practices or 
+        the content of such sites. The link to other web sites is for information 
+        purposes only and is not a guarantee or endorsement of the material, services 
+        or products on those web sites.
+      </p>
       <div align="center">
 <form>
 <input type="button" value="Close" onclick="javascript:window.close()">
 </form></div>
-    </td>
+    </span></td>
 </tr>
 </tbody></table>
 <p>&nbsp;</p>
