--- a/g/ge/get/getoutofdebt.org.html
+++ b/g/ge/get/getoutofdebt.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the getoutofdebt.org privacy policy that was archived on 2004-06-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040603161222id_/http%3A//myvesta.org/aboutus/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the getoutofdebt.org privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204182249id_/http%3A//myvesta.org/aboutus/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 	<title>Myvesta - Privacy Policy</title>
@@ -47,7 +47,7 @@ function MM_swapImage() { //v3.0
 //-->
 </script>
 </head>
-<body onload="MM_preloadImages('http://myvesta.org/images/tnav_home_over.gif','http://myvesta.org/images/tnav_news_over.gif','http://myvesta.org/images/tnav_pubs_over.gif','http://myvesta.org/images/tnav_audio_over.gif','http://myvesta.org/images/tnav_email_over.gif','http://myvesta.org/images/tnav_creditreports_over.gif','http://myvesta.org/images/tnav_store_over.gif')" bgcolor="#FFFFFF" link="#3333CC" vlink="#3333CC" alink="#3333CC" leftmargin="0" topmargin="0" marginwidth="0">
+<body onload="MM_preloadImages('http://myvesta.org/images/tnav_home_over.gif','http://myvesta.org/images/tnav_news_over.gif','http://myvesta.org/images/tnav_pubs_over.gif','http://myvesta.org/images/tnav_audio_over.gif','http://myvesta.org/images/tnav_creditreports_over.gif','http://myvesta.org/images/tnav_store_over.gif')" bgcolor="#FFFFFF" link="#3333CC" vlink="#3333CC" alink="#3333CC" leftmargin="0" topmargin="0" marginwidth="0">
 <div align="center">
 <noscript><img 
 src="http://phg.hitbox.com/HG?hc=wp110&cd=1&hv=6&ce=u&hb=WR5306300NWC11EN3&n=Privacy+Policy&vcon=About+Us" border='0' width='1' height='1'></noscript><table width="783" border="0" cellspacing="0" cellpadding="0">
@@ -58,7 +58,7 @@ src="http://phg.hitbox.com/HG?hc=wp110&cd=1&hv=6&ce=u&hb=WR5306300NWC11EN3&n=Pri
 <td width="783" height="54" align="left" colspan="2"><img src="http://myvesta.org/images/spacer.gif" width="40" height="54" border="0" align="left" alt=""><a href="http://Myvesta.org"><img src="http://myvesta.org/images/logo_150.gif" width="150" height="54" border="0" align="left" alt="Myvesta"></a><img src="http://myvesta.org/images/nonprofit.gif" width="312" height="54" border="0" alt=""></td>
 </tr>
 <tr>
-      <td width="783" height="20" colspan="2" bgcolor="#333333"><img src="http://myvesta.org/images/tnav_left.gif" width="141" height="20" border="0" alt=""><a href="http://Myvesta.org" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('tnav_home','','http://myvesta.org/images/tnav_home_over.gif',1)"><img name="tnav_home" border="0" src="http://myvesta.org/images/tnav_home.gif" width="34" height="20"></a><img src="http://myvesta.org/images/tnav_spacer1.gif" width="4" height="20" border="0" alt=""><a href="http://Myvesta.org/news" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('tnav_news','','http://myvesta.org/images/tnav_news_over.gif',1)"><img name="tnav_news" border="0" src="http://myvesta.org/images/tnav_news.gif" width="78" height="20"></a><img src="http://myvesta.org/images/tnav_spacer2.gif" width="4" height="20" border="0" alt=""><a href="http://Myvesta.org/pubs" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('tnav_pubs','','http://myvesta.org/images/tnav_pubs_over.gif',1)"><img name="tnav_pubs" border="0" src="http://myvesta.org/images/tnav_pubs.gif" width="71" height="20"></a><img src="http://myvesta.org/images/tnav_spacer3.gif" width="4" height="20" border="0" alt=""><a href="http://Myvesta.org/av" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('tnav_audio','','http://myvesta.org/images/tnav_audio_over.gif',1)"><img name="tnav_audio" border="0" src="http://myvesta.org/images/tnav_audio.gif" width="84" height="20"></a><img src="http://myvesta.org/images/tnav_spacer4.gif" width="4" height="20" border="0" alt=""><a href="https://www3.myvesta.org/Registration/subscribe.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('tnav_email','','http://myvesta.org/images/tnav_email_over.gif',1)"><img name="tnav_email" border="0" src="http://myvesta.org/images/tnav_email.gif" width="63" height="20"></a><img src="http://myvesta.org/images/tnav_spacer5.gif" width="4" height="20" border="0" alt=""><a href="http://Myvesta.org/resources/creditreports.htm" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('tnav_creditreports','','http://myvesta.org/images/tnav_creditreports_over.gif',1)"><img name="tnav_creditreports" border="0" src="http://myvesta.org/images/tnav_creditreports.gif" width="83" height="20"></a><img src="http://myvesta.org/images/tnav_spacer6.gif" width="8" height="20" border="0" alt=""><a href="http://myvestastore.org" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('tnav_store','','http://myvesta.org/images/tnav_store_over.gif',1)"><img name="tnav_store" border="0" src="http://myvesta.org/images/tnav_store.gif" width="73" height="20"></a><img src="http://myvesta.org/images/tnav_right2.gif" width="128" height="20" border="0" alt=""></td>
+      <td width="783" height="20" colspan="2" bgcolor="#333333"><img src="http://myvesta.org/images/tnav_left.gif" width="141" height="20" border="0" alt=""><a href="http://Myvesta.org" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('tnav_home','','http://myvesta.org/images/tnav_home_over.gif',1)"><img name="tnav_home" border="0" src="http://myvesta.org/images/tnav_home.gif" width="34" height="20"></a><img src="http://myvesta.org/images/tnav_spacer1.gif" width="4" height="20" border="0" alt=""><a href="http://Myvesta.org/news" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('tnav_news','','http://myvesta.org/images/tnav_news_over.gif',1)"><img name="tnav_news" border="0" src="http://myvesta.org/images/tnav_news.gif" width="78" height="20"></a><img src="http://myvesta.org/images/tnav_spacer2.gif" width="4" height="20" border="0" alt=""><a href="http://Myvesta.org/pubs" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('tnav_pubs','','http://myvesta.org/images/tnav_pubs_over.gif',1)"><img name="tnav_pubs" border="0" src="http://myvesta.org/images/tnav_pubs.gif" width="71" height="20"></a><img src="http://myvesta.org/images/tnav_spacer3.gif" width="4" height="20" border="0" alt=""><a href="http://Myvesta.org/av" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('tnav_audio','','http://myvesta.org/images/tnav_audio_over.gif',1)"><img name="tnav_audio" border="0" src="http://myvesta.org/images/tnav_audio.gif" width="84" height="20"></a><img src="http://myvesta.org/images/tnav_spacer4.gif" width="4" height="20" border="0" alt=""><a href="http://Myvesta.org/resources/creditreports.htm" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('tnav_creditreports','','http://myvesta.org/images/tnav_creditreports_over.gif',1)"><img name="tnav_creditreports" border="0" src="http://myvesta.org/images/tnav_creditreports.gif" width="83" height="20"></a><img src="http://myvesta.org/images/tnav_spacer6.gif" width="8" height="20" border="0" alt=""><a href="http://myvestastore.org" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('tnav_store','','http://myvesta.org/images/tnav_store_over.gif',1)"><img name="tnav_store" border="0" src="http://myvesta.org/images/tnav_store.gif" width="73" height="20"></a><img src="http://myvesta.org/images/spacer.gif" width="67" height="20" border="0" alt=""><img src="http://myvesta.org/images/tnav_right2.gif" width="128" height="20" border="0" alt=""></td>
 </tr>
 <!-- End Top Section -->
 <tr>
@@ -129,7 +129,7 @@ document.write('alt=\"' + alt + '\" border=0><br>');
 document.write('</a>');
 document.write('</center>');
 // End -->
-</script><center><a href="http://myvesta.org/recipes" target="_top"><img src="http://myvesta.org/images/cookbook/recipes_leftnav.gif" width="141" height="210" alt="Inexpensive Recipes - Easy Entertaining" border="0"><br></a></center>
+</script><center><a href="http://myvestastore.org/debelrep.html" target="_top"><img src="http://myvesta.org/images/leftnav/debteliminator_leftnav.jpg" width="141" height="210" alt="Debt Eliminator" border="0"><br></a></center>
 
 <img src="http://myvesta.org/images/lnav_selfhelp.gif" width="141" height="33" border="0" alt="Self-Help"><br>
 <font face="arial,helvetica,geneva" size="1" color="#135192">
@@ -137,7 +137,6 @@ document.write('</center>');
 &nbsp;<a href="http://Myvesta.org/pubs" class="left">Publications</a><br>
 &nbsp;<a href="http://myvestastore.org/tapes.html" class="left">Audio Tapes</a><br>
 &nbsp;<a href="http://myvesta.org/tests/moneypersonality/default.htm" class="left">Money Personality Test</a><br>
-&nbsp;<a href="https://www3.myvesta.org/Registration/subscribe.asp" class="left">DebtBytes Email List</a><br>
 &nbsp;<a href="http://myvesta.org/aboutus/free.htm" class="left">Free Stuff</a><br>
 &nbsp;<a href="http://myvestastore.org/debelrep.html" class="left">Debt Eliminator </a>®<br>
 &nbsp;<a href="http://myvesta.org/column" class="left">Weekly Q &amp; A Column</a>
@@ -162,18 +161,14 @@ document.write('</center>');
 <img src="http://myvesta.org/images/lnav_exhibits.gif" width="141" height="33" border="0" alt="Online Exhibits"><br>
 <font face="arial,helvetica,geneva" size="1" color="#135192">
 &nbsp;<a href="http://Myvesta.org/history" class="left">History of Credit and Debt</a><br>
+&nbsp;<a href="http://Myvesta.org/films" class="left">Historical Financial Films</a><br>
 </font>
 
 <img src="http://myvesta.org/images/lnav_blueline.gif" width="141" height="1" border="0" alt="">
 <img src="http://myvesta.org/images/lnav_myvesta.gif" width="141" height="33" border="0" alt="Myvesta"><br>
 <font face="arial,helvetica,geneva" size="1" color="#135192">
-&nbsp;301-762-5270<br>
-&nbsp;1-800-MYVESTA<br>
 &nbsp;<a href="http://Myvesta.org/news" class="left">Media Help</a><br>
-&nbsp;<a href="http://Myvesta.org/aboutus/trust.htm" class="left">Trust Us</a><br>
 &nbsp;<a href="http://Myvesta.org/resources/resources.htm" class="left">Other Resources</a><br>
-&nbsp;<a href="http://Myvesta.org/aboutus/visitus.htm" class="left">Visit Us</a><br>
-&nbsp;<a href="http://myvesta.org/aboutus/namechange.htm" class="left">Debt Counselors of America</a><br>
 &nbsp;<a href="http://Myvesta.org/aboutus/privacy.htm" class="left">Privacy Policy</a><br>
 </font><p><font face="arial,helvetica,geneva" size="1" color="#135192">
 </font>
@@ -260,8 +255,8 @@ if(_bn!='Netscape'&&_bv>399)document.write("<\!"+"--");</script><!--//-->
 
 	</p><p>You can send mail to the following postal address:<br>
 	Myvesta<br>
-	PO Box 7153<br>
-	Gaithersburg, MD 20898-7153
+	PO Box 8587<br>
+	Gaithersburg, MD 20898-8587
 	
 	</p><p>If you wish to stop receiving emails, forward the last email you received from us so we can identify which address it was sent to. Often people have changed email providers and the old email address they gave us is being forwarded to a new address which is not in our records. Without the original email address we can not locate the address to remove from any email lists. If you wish to opt-out of email communications, follow the unsubscribe instructions on the bottom of the email received.
 	
@@ -271,8 +266,8 @@ if(_bn!='Netscape'&&_bv>399)document.write("<\!"+"--");</script><!--//-->
 
 	</p><p>Administrator<br>
 	Myvesta<br>
-	PO Box 7153<br>
-	Gaithersburg, MD 20898-7153
+	PO Box 8587<br>
+	Gaithersburg, MD 20898-8587
 	
 	</p><p>Prefer email? Write to<script language="JavaScript">
 <!-- 
@@ -297,8 +292,8 @@ function print_mail_to_link()
 <br>
 <!-- End Main Page Content -->
 <div align="center">
-	<p><a href="http://Myvesta.org" class="left">Home</a> | <a href="http://Myvesta.org/news" class="left">News &amp; Stats</a> | <a href="http://Myvesta.org/pubs" class="left">Publications</a> | <a href="http://Myvesta.org/av" class="left">Audio &amp; Video</a> | <a href="http://myvestastore.org" class="left">Online Store</a><br>
-	<a href="https://www3.myvesta.org/Registration/subscribe.asp" class="left">Tips Email</a> | <a href="http://Myvesta.org/resources/creditreports.htm" class="left">Credit Reports</a>
+	<p><a href="http://Myvesta.org" class="left">Home</a> | <a href="http://Myvesta.org/news" class="left">News &amp; Stats</a> | <a href="http://Myvesta.org/pubs" class="left">Publications</a> | <a href="http://Myvesta.org/av" class="left">Audio &amp; Video</a><br>
+	<a href="http://Myvesta.org/resources/creditreports.htm" class="left">Credit Reports</a> | <a href="http://myvestastore.org" class="left">Online Store</a>
 	</p><p><a href="http://myvestastore.org"><img src="http://myvesta.org/images/myvestastore_logo_btm.gif" width="95" height="41" border="0" alt=""></a><a href="http://www.cafeshops.com/myvesta"><img src="http://myvesta.org/images/debtsucks_btm.gif" width="95" height="41" border="0" alt=""></a>
 	<br><br>
 <!-- new book table -->
