--- a/s/sh/sho/shopcartusa.com.html
+++ b/s/sh/sho/shopcartusa.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the shopcartusa.com privacy policy that was archived on 2004-06-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040605002139id_/http%3A//www.shopcartusa.com/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the shopcartusa.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204182646id_/http%3A//www.shopcartusa.com/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 <title>ShopCartUSA.com - Join FREE!</title>
@@ -30,24 +30,24 @@
   </map><table width="711" border="0" cellpadding="0" cellspacing="0">
       <tbody><tr>
 
-    <td width="711"><img height="84" src="images/zsd_tm_01n_li.gif" width="711" usemap="#MapHeaderCats" border="0"></td>
+    <td width="711"><img height="84" src="http://www.shopcartusa.com/images/zsd_tm_01n_li.gif" width="711" usemap="#MapHeaderCats" border="0"></td>
 
   </tr>
-  <tr background="images/zsd_tm_03.gif">
+  <tr background="http://www.shopcartusa.com/images/zsd_tm_03.gif">
     <td height="30">
-      <table height="30" cellspacing="0" cellpadding="0" width="711" background="images/zsd_tm_02n.gif" border="0">
+      <table height="30" cellspacing="0" cellpadding="0" width="711" background="http://www.shopcartusa.com/images/zsd_tm_02n.gif" border="0">
           <tbody><tr> 
             <td width="100">&nbsp;</td>
 		    <form name="searchtop" action="nsearch.asp" method="post"></form>
-            <td><img src="images/1x1clear.gif" width="8" height="8"><img src="images/zsd_fpa_search.gif" width="101" height="12"> 
+            <td><img src="http://www.shopcartusa.com/images/1x1clear.gif" width="8" height="8"><img src="http://www.shopcartusa.com/images/zsd_fpa_search.gif" width="101" height="12"> 
               <input name="search" maxlength="50" style="width: 190px;" value="">
-              <img src="images/zsd_fpa_in.gif" width="9" height="10" vspace="1"> 
+              <img src="http://www.shopcartusa.com/images/zsd_fpa_in.gif" width="9" height="10" vspace="1"> 
 			 <select name="cat" style="width: 165px;">
         	  <option selected="" value="">Search All Categories</option>
-<option value="30">Appliances</option><option value="31">Babies &amp; Kids</option><option value="49">Books &amp; Magazines</option><option value="32">Clothing &amp; Accessories</option><option value="33">Computers</option><option value="34">Electronics</option><option value="35">Flowers &amp; Gifts</option><option value="37">Furniture</option><option value="39">Health &amp; Beauty</option><option value="40">Home &amp; Garden</option><option value="41">Jewelry &amp; Watches</option><option value="50">Music</option><option value="42">Musical Instruments</option><option value="43">Office</option><option value="44">Pets</option><option value="45">Software</option><option value="46">Sports &amp; Fitness</option><option value="47">Tools &amp; Hardware</option><option value="48">Toys &amp; Video Games</option><option value="51">Videos &amp; DVDs</option>
+<option value="30">Appliances</option><option value="31">Babies &amp; Kids</option><option value="49">Books &amp; Magazines</option><option value="32">Clothing &amp; Accessories</option><option value="33">Computers</option><option value="34">Electronics</option><option value="35">Flowers &amp; Gifts</option><option value="37">Furniture</option><option value="39">Health &amp; Beauty</option><option value="40">Home &amp; Garden</option><option value="41">Jewelry &amp; Watches</option><option value="50">Music</option><option value="42">Musical Instruments</option><option value="43">Office</option><option value="44">Pets</option><option value="62">Photography</option><option value="45">Software</option><option value="46">Sports &amp; Fitness</option><option value="47">Tools &amp; Hardware</option><option value="48">Toys &amp; Games</option><option value="60">Travel</option><option value="61">Video Games</option><option value="51">Videos &amp; DVDs</option>
 	        </select>
-			  <input type="image" src="images/zsd_fpa_searchbut.gif" width="57" height="22" align="absbottom" name="image">
-            <a href="searchtips.asp"><img src="images/zsd_acc_ST.gif" width="48" height="7" border="0" align="absmiddle"></a> 
+			  <input type="image" src="http://www.shopcartusa.com/images/zsd_fpa_searchbut.gif" width="57" height="22" align="absbottom" name="image">
+            <a href="searchtips.asp"><img src="http://www.shopcartusa.com/images/zsd_acc_ST.gif" width="48" height="7" border="0" align="absmiddle"></a> 
           </td>
             
           </tr>
@@ -187,30 +187,34 @@
       </td>
     </tr>
         <tr> 
-      <td> <img src="images/zsd_ST_10.gif" width="711" height="10" alt=""></td>
+      <td> <img src="http://www.shopcartusa.com/images/zsd_ST_10.gif" width="711" height="10" alt=""></td>
     </tr>
   </tbody></table>
 
    
 <div align="center">
 
+<!--
+
  <br>
 
- <table width="712" border="0" cellspacing="0" cellpadding="2" align="center">
-    <tbody><tr>
+ <table width="712" border="0" cellspacing="0" cellpadding="2" align=center>
+    <tr>
       <td align="center"><span class="small"><a href="http://www.shopcartusa.com/go/SU00000007" target="_blank"><img src="./images/banners/nav-banner2.gif" align="absbottom" border="1" width="234" height="60"></a><br>
       <img src="images/zsd_mpromo_ADVERT.gif" width="99" height="9">      </span></td>
       <td align="center"><span class="small"><a href="http://www.shopcartusa.com/go/SU00000005" target="_blank"><img src="./images/banners/ebargain.gif" align="absbottom" border="1" width="234" height="60"></a><br>
       <img src="images/zsd_mpromo_ADVERT.gif" width="99" height="9"></span></td>
     </tr>
- </tbody></table>
+ </table>
+
+-->
 
  <span class="small">
-  <br>© 2002, ShopCartUSA.com, All Rights Reserved.</span> <a href="javascript:window.external.AddFavorite('http://www.shopcartusa.com','ShopCartUSA.com - Online Savings!')" class="small">Bookmark 
+  <br>© 2002, ShopCartUSA.com, All Rights Reserved.</span> <a href="javascript:window.external.AddFavorite('http://www.shopcartusa.com/','ShopCartUSA.com - Online Savings!')" class="small">Bookmark 
   ShopCartUSA!</a> <font size="1">|</font> <a href="privacy.asp" class="small">Privacy 
-  Policy</a> <font size="1">|</font> <a href="#" onclick="window.open('spread.asp','RIC','width=350,height=403,top=20,left=20,resizable=no,scrollbars=no');return false;" class="small">Tell 
-  Your Friends!</a> <font size="1">|</font> <a href="#" onclick="window.open('spread.asp','RIC','width=350,height=403,top=20,left=20,resizable=no,scrollbars=no');return false;" class="small">Advertise 
-  With Us</a>
+  Policy</a> <font size="1">|</font> <a href="#" onclick="window.open('http://www.shopcartusa.com/spread.asp','RIC','width=350,height=403,top=20,left=20,resizable=no,scrollbars=no');return false;" class="small">Tell 
+  Your Friends!</a> <font size="1">|</font> <a href="http://clients.shopcartusa.com/" target="_blank" class="small">Advertise 
+  With Us</a> <font size="1">|</font> <a href="http://www.shopcartusa.com/affiliate_inquiry.asp" class="small">Affiliate Program</a>
  
 
 </div>
